@@ -17,6 +17,7 @@ Bugs fixed
 ----------
 
 * #7428: py domain: a reference to class ``None`` emits a nitpicky warning
+* #7438: C++, fix merging overloaded functions in parallel builds.
 
 Testing
 --------
